Fix transparency on safari

--- a/components/Logo/styles.module.scss
+++ b/components/Logo/styles.module.scss
@@ -7,7 +7,7 @@
     display: flex;
 
     span {
-        color: transparent;
+        color: rgba(255, 255, 255, 0);
         position: relative;
         text-transform: lowercase;
 
